<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".RegisterBankDetailsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/first_of_the_few_steps_to_set_you_up_with_a_bank_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPanHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/heading_pan_number"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/txtHeading"
        app:layout_constraintStart_toStartOf="@+id/txtHeading"
        app:layout_constraintTop_toBottomOf="@id/txtHeading" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPanNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/edittext_border"
        android:hint="@string/pan_number"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/txtPanHeading"
        app:layout_constraintStart_toStartOf="@+id/txtPanHeading"
        app:layout_constraintTop_toBottomOf="@id/txtPanHeading" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/birthdate"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/editPanNumber" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtBirthDate">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editDay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/day"
            android:inputType="number"
            android:maxLength="2"
            android:padding="@dimen/_5sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editMonth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/month"
            android:inputType="number"
            android:maxLength="2"
            android:padding="@dimen/_5sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editYear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:padding="@dimen/_5sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLearnMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/providing_pan_and_date_of_birth_helps_us_find_and_fetch_your_kyc"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/blue"
        android:enabled="false"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txtDontHavePanNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDontHavePanNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/i_don_t_have_a_pan"
        android:gravity="center"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>